@@ -19,9 +19,11 @@ Douwe Kiela
 Eugene Kotlyarov
 Geoff Wing
 Giles Lean
+Hauke Fath
 Havard Eidnes
 Hubert Feyrer
 ITOH Yasufumi
+Jared McNeill
 Jason R. Thorpe
 John Hawkinson
 Joseph S. Myers
